Helper message for users

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Main</title>
 </head>
 <body>
+    <h1>This is a console game please open your console!</h1>
     <script src="game.js"></script>
     
 </body>
